# StockMarketSim

./: .env.example  .gitignore  LICENSE  README.md  app.py  index.html  package-lock.json  package.json  requirements.txt  test_app.py
backend/: README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 04d2fc895639_fixing_relations_among_user_.py  3a7f559fa342_remove_redundant_fullname_from_users.py  8cd45dd2636e_refactoring_securities_models.py  a799a39e033b_refactoring_transactions_models.py  ff34a597c317_modifying_some_fields_in_user.py
backend/alembic/versions333/: 10122d14f655_creating_initial_tables_user_items_.py  3a7f559fa342_remove_redundant_fullname_from_users.py  a4d976a36152_fixing_relations_among_user_.py
backend/app/: crud.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: items.py  login.py  private.py  transaction.py  transactions.py  users.py
backend/app/core/: config.py  db.py
backend/app/models/: __init__.py  security.py  transaction.py  user.py
src/: App.jsx  index.css  router.jsx  theme.js
src/api/: alerts.js  api-log.md  auth.js  client.js  index.js  market.js  news.js  portfolio.js  stocks.js  trades.js  wallet.js  watchlist.js
src/components/: ChartCard.jsx  Footer.jsx  Navbar.jsx  PortfolioTable.jsx  StockCard.jsx
src/context/: ThemeContext.jsx  ToastContext.jsx  UserContext.jsx
src/data/: mockStocks.js
src/hooks/: usePortfolio.js
src/pages/: Activity.jsx  Dashboard.jsx  (+8 more)
templates/: base.html  buy.html  dashboard.html  index.html  login.html  portfolio.html  register.html  sell.html
(+37 files in other folders)
