[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "bcrypt==4.3.0",
    "emails>=0.6",
    "fastapi[standard]>=0.121.2",
    "finnhub-python>=2.4.25",
    "passlib>=1.7.4",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.9",
    "sqlmodel>=0.0.27",
]
